build: require JDK 14 or later