@@ -49,8 +49,8 @@ version = when (deployment.type) {
 }
 
 java {
-    sourceCompatibility = JavaVersion.VERSION_13
-    targetCompatibility = JavaVersion.VERSION_13
+    sourceCompatibility = JavaVersion.VERSION_14
+    targetCompatibility = JavaVersion.VERSION_14
 
     val mainGen = mkdir(File(projectDir, "src/main-generated/java/"))
     val testGen = mkdir(File(projectDir, "src/test-generated/java/"))
@@ -60,10 +60,6 @@ java {
 }
 
 tasks {
-    withType<JavaCompile> {
-        options.compilerArgs.add("--enable-preview")
-    }
-
     jar {
         archiveBaseName.set(artifactName)
 
